--- a/Tools/Test/makefile
+++ b/Tools/Test/makefile
@@ -1,6 +1,7 @@
 CC = gcc
 CXX = g++
 NVCC = nvcc
+CUDACNFG= -arch=sm_35
 LIBDIR = lib/
 OBJDIR = obj/
 
@@ -12,7 +13,7 @@ $(OBJDIR):
 	mkdir -p $@
 
 test: test.cu
-	$(NVCC) -o $@ $+ 
+	$(NVCC) $(CUDACNFG) -o $@ $+ 
 
 clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
