move, addition, substraction

--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -1,12 +1,17 @@
 CC = gcc
-CXX = g++
+CXX = clang++
 NVCC = nvcc
 CUDACNFG= -arch=sm_35
 LIBDIR = lib/
 OBJDIR = obj/
 TARGET = powerANN
+CMATRIX = cMatrix
+OPTION = -std=c++0x -g
 
 phony: $(TARGET) $(OBJDIR) run
+
+$(CMATRIX): $(CMATRIX).cpp
+	$(CXX) $(OPTION) -o $@ $+
 
 $(LIBDIR):
 	mkdir -p $@
@@ -20,4 +25,4 @@ clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
 
 run:
-	./$(TARGET)
+	./$(CMATRIX)
