first successful xMatrix to cuMatrix transfer

--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -4,25 +4,28 @@ NVCC = nvcc
 CUDACNFG= -arch=sm_35
 LIBDIR = lib/
 OBJDIR = obj/
-TARGET = powerANN
-CMATRIX = cMatrix
+TARGET = cudaMatrixTest
+XMATRIX = xMatrix
+CUMATRIX = cuMatrix
 OPTION = -std=c++0x -g
 
-phony: $(TARGET) $(OBJDIR) run
+phony: $(TARGET) run
 
-$(CMATRIX): $(CMATRIX).cpp
-	$(CXX) $(OPTION) -o $@ $+
+$(XMATRIX).o: $(XMATRIX).cpp
+	$(CXX) -c $(OPTION) -o $@ $+
 
+$(CUMATRIX).o: $(CUMATRIX).cpp
+	$(NVCC) -c $+ -Xcompiler '$(OPTION)' -o $@ 
+
+$(TARGET): $(TARGET).cpp $(CUMATRIX).o
+	$(NVCC) $+ -Xcompiler '$(OPTION)' -o $@ 
 $(LIBDIR):
 	mkdir -p $@
 $(OBJDIR):
 	mkdir -p $@
 
-$(TARGET): $(TARGET).cu
-	$(NVCC) $(CUDACNFG) -o $@ $+ 
-
 clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
 
 run:
-	./$(CMATRIX)
+	./$(TARGET)
