--- a/src/ml/makefile
+++ b/src/ml/makefile
@@ -1,10 +1,11 @@
 CC = gcc
-CXX = g++
+CXX = clang++
 NVCC = nvcc
 CUDACNFG= -arch=sm_35
 LIBDIR = lib/
 OBJDIR = obj/
 TARGET = powerANN
+OPTION = -std=c++0x -g
 
 phony: $(TARGET) $(OBJDIR) run
 
@@ -13,8 +14,8 @@ $(LIBDIR):
 $(OBJDIR):
 	mkdir -p $@
 
-$(TARGET): $(TARGET).cu
-	$(NVCC) $(CUDACNFG) -o $@ $+ 
+$(TARGET): $(TARGET).cpp
+	$(CXX) $(OPTION) $+ -o $@ 
 
 clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
