--- a/src/ml/makefile
+++ b/src/ml/makefile
@@ -4,21 +4,26 @@ NVCC = nvcc
 CUDACNFG= -arch=sm_35
 LIBDIR = lib/
 OBJDIR = obj/
-TARGET = powerANN
 OPTION = -std=c++0x -g
 
-phony: $(TARGET) $(OBJDIR) run
+phony: powerANN $(OBJDIR) run
 
 $(LIBDIR):
 	mkdir -p $@
 $(OBJDIR):
 	mkdir -p $@
 
-$(TARGET): $(TARGET).cpp
-	$(CXX) $(OPTION) $+ -o $@ 
+../lib/cuMatrix.o:
+	make ../lib/makefile
+
+../lib/cudaMatrix.o:
+	make ../lib/makefile
+
+powerANN: powerANN.cpp ../lib/cuMatrix.o ../lib/cudaMatrix.o
+	$(NVCC) $(CUDACNFG) -Xcompiler '$(OPTION)' -o $@ $+ 
 
 clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
 
 run:
-	./$(TARGET)
+	./powerANN
