--- a/src/unitTests/makefile
+++ b/src/unitTests/makefile
@@ -12,13 +12,11 @@ phony: cuMatrixUnit xMatrixUnit run
 xMatrixUnit: xMatrixUnit.cpp
 	$(CXX) $(OPTION) -o $@ $+
 
-../lib/cuMatrix.o:
-	make ../lib/makefile
 
 ../lib/cudaMatrix.o:
 	make ../lib/makefile
 
-cuMatrixUnit: cuMatrixUnit.cpp ../lib/cuMatrix.o ../lib/cudaMatrix.o
+cuMatrixUnit: cuMatrixUnit.cpp  ../lib/cudaMatrix.o
 	$(NVCC) $(CUDACNFG) -Xcompiler '$(OPTION)' -o $@ $+ 
 
 clean:
