adjusted makefile; provided example for the use of the xMatrixRedisStringAdapter

--- a/src/db/makefile
+++ b/src/db/makefile
@@ -1,7 +1,10 @@
-OPTION = -std=c++0x -lhiredis -I/usr/local/include/hiredis
+OPTION = -g -std=c++0x
+LIBOPTION = -lhiredis -I/usr/local/include/hiredis
 
-phony: example
+phony: xMatrixRedisStringAdapter.o example
 
+xMatrixRedisStringAdapter.o: xMatrixRedisStringAdapter.cpp
+	clang++ $(OPTION) $(LIBOPTION) -o $@ -c $+
 
-example: example.cpp
-	clang++ $(OPTION) -o $@ $+
+example: example.cpp xMatrixRedisStringAdapter.o
+	clang++ $(OPTION) $(LIBOPTION) -o $@ $+
