example.cpp is now using binary adapter makefile adjusted added comment to xMatrixRedisStringAdapter.hpp

--- a/src/db/makefile
+++ b/src/db/makefile
@@ -1,10 +1,13 @@
 OPTION = -g -std=c++0x
 LIBOPTION = -lhiredis -I/usr/local/include/hiredis
 
-phony: xMatrixRedisStringAdapter.o example
+phony: xMatrixRedisBinaryAdapter.o xMatrixRedisStringAdapter.o example
 
 xMatrixRedisStringAdapter.o: xMatrixRedisStringAdapter.cpp
 	clang++ $(OPTION) $(LIBOPTION) -o $@ -c $+
 
-example: example.cpp xMatrixRedisStringAdapter.o
+xMatrixRedisBinaryAdapter.o: xMatrixRedisBinaryAdapter.cpp
+	clang++ $(OPTION) $(LIBOPTION) -o $@ -c $+
+
+example: example.cpp xMatrixRedisStringAdapter.o xMatrixRedisBinaryAdapter.o
 	clang++ $(OPTION) $(LIBOPTION) -o $@ $+
