--- a/src/db/makefile
+++ b/src/db/makefile
@@ -1,7 +1,9 @@
+NVCC = nvcc
+CUDACNFG= -arch=sm_20 -O2 -lcurand
 OPTION = -g -std=c++0x
 LIBOPTION = -lhiredis -L/usr/local/lib -I/usr/local/include/hiredis
 
-phony: example
+phony: cuMatrixRedisBinaryAdapter.o
 
 xMatrixRedisStringAdapter.o: xMatrixRedisStringAdapter.cpp
 	clang++ $(OPTION) $(LIBOPTION) -o $@ -c $+
@@ -15,3 +17,5 @@ xMatrixFileAdapter.o: xMatrixFileAdapter.cpp
 example: example.cpp xMatrixRedisStringAdapter.o xMatrixRedisBinaryAdapter.o xMatrixFileAdapter.o
 	clang++ $(OPTION) $(LIBOPTION) -o $@ $+
 
+cuMatrixRedisBinaryAdapter.o: cuMatrixRedisBinaryAdapter.cpp 
+	$(NVCC) $(CUDACNFG) -Xcompiler '$(OPTION) $(LIBOPTION)' -o $@ -c $+ 
