implemented waveletfilter by name for haar and daubechies

--- a/src/wt/makefile
+++ b/src/wt/makefile
@@ -2,8 +2,11 @@ OPTION = -g -std=c++0x
 
 phony: example
 
-xWaveletTransform.o: xWaveletTransform.cpp
+xFilter.o: xFilter.cpp
 	clang++ $(OPTION) -o $@ -c $+
 
-example: example.cpp xWaveletTransform.o
+xWaveletTransform.o: xWaveletTransform.cpp xFilter.o
+	clang++ $(OPTION) -o $@ -c $+
+
+example: example.cpp xWaveletTransform.o xFilter.o
 	clang++ $(OPTION) -o $@ $+
