deleted unused files and binaries

--- a/src/wt/makefile
+++ b/src/wt/makefile
@@ -5,8 +5,11 @@ phony: example
 Filter.o: Filter.cpp
 	clang++ $(OPTION) -o $@ -c $+
 
-WaveletTransformator.o: WaveletTransformator.cpp Filter.o
+SymetricPadding.o: SymetricPadding.cpp
 	clang++ $(OPTION) -o $@ -c $+
 
-example: example.cpp WaveletTransformator.o Filter.o
+WaveletTransformator.o: WaveletTransformator.cpp Filter.o SymetricPadding.o
+	clang++ $(OPTION) -o $@ -c $+
+
+example: example.cpp WaveletTransformator.o Filter.o SymetricPadding.o
 	clang++ $(OPTION) -o $@ $+
