--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -1,7 +1,7 @@
 CC = gcc
-CXX = clang++
+CXX = g++
 NVCC = nvcc
-CUDACNFG= -arch=sm_20
+CUDACNFG= -arch=sm_20 -ccbin=/usr/bin/g++
 LIBDIR = lib/
 OBJDIR = obj/
 OPTION = -std=c++0x -g
@@ -17,10 +17,10 @@ xMatrix.o: xMatrix.hpp
 	$(CXX) $(OPTION) -o $@ -c $+
 
 cudaMatrix.o: cuMatrix.cu
-	$(NVCC) $(CUDACNFG) -o $@ -c $+
+	$(NVCC) $(CUDACNFG) -o $@ -Xcompiler '-fPIC' --shared $+
 
 cuMatrix.o: cuMatrix.hpp 
-	$(NVCC) $(CUDACNFG) -Xcompiler '$(OPTION)' -o $@ -c -x c++ $+ 
+	$(CXX) $(OPTION) -o $@ -c -x c++ $+ 
 
 clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
