--- a/src/ml/makefile
+++ b/src/ml/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CXX = clang++
 NVCC = nvcc
-CUDACNFG= -arch=sm_20
+CUDACNFG= -arch=sm_20 -lcurand -ccbin=/usr/bin/g++
 LIBDIR = lib/
 OBJDIR = obj/
 OPTION = -std=c++0x -g
@@ -11,11 +11,9 @@ phony: ann.o
 ../lib/cuMatrix.o:
 	make ../lib/makefile
 
-../lib/cudaMatrix.o:
-	make ../lib/makefile
 
-ann.o: ann.cu
-	$(NVCC) $(CUDACNFG) -o $@ -c $+
+libann.so: ann.cu
+	$(NVCC) $(CUDACNFG) -o $@ -Xcompiler '-fPIC' --shared $+
 
 clean:
 	rm -rf $(OBJDIR) $(LIBDIR)	
