--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -6,7 +6,7 @@ LIBDIR = lib/
 OBJDIR = obj/
 OPTION = -std=c++0x -g
 
-phony: cuMatrix.o cudaMatrix.o 
+phony: cudaMatrix.o
 
 $(LIBDIR):
 	mkdir -p $@
@@ -17,13 +17,13 @@ xMatrix.o: xMatrix.hpp
 	$(CXX) $(OPTION) -o $@ -c $+
 
 cudaMatrix.o: cuMatrix.cu
-	$(NVCC) $(CUDACNFG) -o $@ -Xcompiler '-fPIC' --shared $+
+	$(NVCC) $(CUDACNFG) -o $@ -Xcompiler '-fPIC' -c $+
 
-cuMatrix.o: cuMatrix.hpp 
-	$(CXX) $(OPTION) -o $@ -c -x c++ $+ 
+cuMatrix.o: cuMatrix.hpp
+	$(CXX) $(OPTION) -o $@ -c -x c++ $+
 
 clean:
-	rm -rf $(OBJDIR) $(LIBDIR)	
+	rm -rf $(OBJDIR) $(LIBDIR)
 
 run:
 	./$(TARGET)
